@@ -1,3 +1,7 @@
+Next release:
+- use js_of_ocaml.ppx instead of camlp4 extension
+- use -g flag everywhere
+
 Release 0.16.0:
 - move to uutf 1.0.0
 
